# IntelligentAttendanceSolution

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  Procfile  README.md  SERVER_CAMERA_ACCESS.md  camera_proxy.py  docker-compose.dev.yml  docker-compose.yml  mypy.ini  nginx.template  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pr.yml
IAS/: __main__.py  asgi.py  manage.py  settings.py  urls.py  wsgi.py
IAS/core_apps/attendance/: apps.py  filters.py  models.py  resources.py  views.py
IAS/core_apps/common/: apps.py  models.py  urls.py  views.py
IAS/core_apps/institutes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
IAS/core_apps/staffs/: apps.py  models.py  urls.py  views.py
IAS/core_apps/students/: admin.py  apps.py  models.py  urls.py  views.py
IAS/core_apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
IAS/face_recognition_data/b14bc7e0-03dd-495e-b8ad-38dc89788fbb/: classes.npy  svc.sav
IAS/ias/: asgi.py  general.py  settings.py  urls.py  wsgi.py
IAS/ias/template/: .env_template
IAS/scripts/: train_face_recognization_model.py
core_apps/common/: apps.py  decorators.py  models.py
core_apps/institutes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core_apps/institutes/migrations/: 0002_alter_institute_address_and_more.py  0005_designation.py  (+1 more)
core_apps/staffs/: apps.py  models.py  urls.py  views.py
core_apps/students/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core_apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ias/scripts/: train_face_recognization_model.py
scripts/: entrypoint.sh
(+98 files in other folders)
