[tool.poetry]
name = "ias"
version = "0.1.0"
description = ""
authors = ["Praful Patekar <prafulpatekar23@gmail.com>"]
readme = "README.md"
packages = [{ include = "ias" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.8.21"
django = "3.2"
mysqlclient = "2.2.4"
pillow = "8.4.0"
gunicorn = "22.0.0"
django-phonenumber-field = "8.0.0"
phonenumbers = "8.13.40"
whitenoise = "6.7.0"
dlib = "19.21.1"
django-pandas = "0.6.2"
face-recognition = "1.3.0"
face-recognition-models = "0.3.0"
numpy = "1.21.6"
opencv-python = "4.4.0.46"
pandas = "1.1.5"
python-dateutil = "2.8.1"
pytz = "2020.4"
scikit-learn = "0.24.2"
scipy = "1.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
