[tool.poetry]
name = "ias"
version = "0.1.0"
description = ""
authors = ["Praful Patekar <prafulpatekar23@gmail.com>"]
readme = "README.md"
packages = [{ include = "ias" }]

[tool.poetry.dependencies]
python = "~3.10"
django = "4.2"
mysqlclient = "2.2.4"
pillow = "8.4.0"
gunicorn = "22.0.0"
django-phonenumber-field = "8.0.0"
phonenumbers = "8.13.40"
whitenoise = "6.7.0"
django-pandas = "0.6.2"
face-recognition = "1.3.0"
face-recognition-models = "0.3.0"
numpy = "1.22.4"
opencv-python = "4.5.5.64"
pandas = "2.2.3"
python-dateutil = "2.8.2"
pytz = "2020.4"
scikit-learn = "1.6.1"
scipy = "1.7.3"
imutils = "^0.5.4"
dlib = { path = "dependencies/dlib-19.22.99-cp310-cp310-win_amd64.whl" }
django-import-export = "^4.3.7"
django-filter = "^25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
